--- a/pages/blog2.html
+++ b/pages/blog2.html
@@ -20,7 +20,7 @@
     <h2><i>The Team </i></h2>
     <p>The team at Rajeshahi Resturant , Pune is diverse yet close-knit. They are the most hardworking, dedicated and enthusiastic group of individuals who love to serve their guests. All the team members hospitality ranks beyond expectations as they go out of the way to bring a sense of satisfaction and a smile to our guests faces without losing their exuberance!</p>
 
-    <h2>Private Event At Feat & Feast</h2>
+    <h2>Private Event At Rajeshahi Restaurant</h2>
     <p>If there is one word to describe Rajeshahi Resturant, Pune ,  it would be cosy. With both an indoor and an outdoor section, the restaurant is the perfect venue for private soirees. From Corporate gatherings to intimate private parties,Rajeshahi Resturant,Pune can easily accommodate fifty to sixty guests making it the ideal party hosting destination. Our team will curate menus to suit your budget and the occasion, thus promising to make it a successful event for you and us!
 
     </p>
