--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,32 @@
     <title>Contact us</title>
 </head>
 <body>
-    <h1><i>Contact us <img src="images.html/contact icon.png" height="45px"></i></h1>
+    <b><i>Rajeshahi Family Restaurant</i></b> &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+    <a href="./../index.html">Home</a>
+    &nbsp;&nbsp;
+    &nbsp; &nbsp;
+    <a href="./Menu.html">Menu</a>
+    &nbsp;&nbsp;
+    <a href="./pages/Gallery.html">Gallery</a>
+    &nbsp;&nbsp;
+    <a href="./pages/contact.html">Contact</a>
+    &nbsp;&nbsp;
+    <a href="./pages/login.html">Login</a>
+    <hr />
+    <h2><i>Contact us <img src="images.html/contact icon.png" height="30px"></i></h2>
     <hr>
 
     <h2><i>Get in Touch <img src="images.html/message icon.png" height="30px"></i></h2>
@@ -40,7 +65,7 @@ placeholder="xyz@gmail.com"/> <br/> <br/>
     <img src="images.html/phone icon.png"height="27px"><a href="Tel:9881748878">
         <a href="9881748878">
         Call us
-    </a>  &nbsp;  &nbsp; <br/>
+    </a>  &nbsp;  &nbsp; <br/> <br/>
 
     <img src="images.html/email icon.png"height="27px">
     <a href ="contactyourhotel@gmail.com"> 
