new different changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Rajeshahi Family Restaurant</title>
   </head>
   <body>
-    <b><i>Rajeshahi Family Restaurant</i></b> &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+   <b><i>Rajeshahi Family Restaurant</i></b> &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
@@ -16,11 +16,11 @@
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
-    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
-    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+    
+   
     <b>Home</b>
     &nbsp; &nbsp;
-    <a href="./Menu.html">Menu</a>
+    <a href="./pages/Menu.html">Menu</a>
     &nbsp;&nbsp;
     <a href="./pages/Gallery.html">Gallery</a>
     &nbsp;&nbsp;
