--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -19,7 +19,7 @@
     
         <a href="./../index.html">Home</a>
         &nbsp;&nbsp;
-        <a href="./../Menu.html">Menu</a>
+        <a href="./Menu.html">Menu</a>
         &nbsp;&nbsp;
         <b>Gallery</b>
         &nbsp; &nbsp;
