--- a/pages/login.html
+++ b/pages/login.html
@@ -22,13 +22,13 @@
      
     <a href="./../index.html">Home</a>
     &nbsp;&nbsp;
-    <a href="./../pages/Menu.html">menu</a>
+    <a href="./../pages/Menu.html">Menu</a>
     &nbsp;&nbsp;
     <a href="./../pages/Gallery.html">Gallery</a>
     &nbsp;&nbsp;
     <a href="./../pages/contact.html">Contact</a>
     &nbsp;&nbsp;
-    <b>login</b>
+    <b>Login</b>
     <br />
     <hr />
 
@@ -56,5 +56,17 @@
         
         <p>Don't Have an account ? <a href="register.html">Create Account</a></p>
     </form>
+    <hr>
+    <div>
+        <p><b>Quick Links</b></p>
+        <ul>
+          <li><a href="./../pages/about.html"><b>About</b></a></li>
+          <li><a href="./../pages/Blog.html"><b>Blogs</b></a></li>
+          <li><a href="./../pages/room.html"><b>Room</b></a></li>
+          <li><a href="./../pages/Highlight.html"><b>Highlight</b></a></li>
+          <!-- <li><a href="#">Contact</a></li> -->
+        </ul>
+      </div>
+      <hr />
     </body>
 </html>
