--- a/pages/register.html
+++ b/pages/register.html
@@ -10,7 +10,7 @@
         &nbsp;
         &nbsp;
         <label for="username"><b>Username :-</b></label><br><img src="./../images/user.png" height="15px"/>
-        <input type="text" id="name" placeholder="Username" required><br><br>
+        <input type="text" id="username" placeholder="Username" required><br><br>
 
         &nbsp;
         &nbsp;
