quick links added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,11 +23,11 @@
     &nbsp; &nbsp;
     <a href="./Menu.html">Menu</a>
     &nbsp;&nbsp;
-    <a href="./pages/Gallery.html">Gallery</a>
+    <a href="./Gallery.html">Gallery</a>
     &nbsp;&nbsp;
-    <a href="./pages/contact.html">Contact</a>
+    <b>Contact</b>
     &nbsp;&nbsp;
-    <a href="./pages/login.html">Login</a>
+    <a href="./login.html">Login</a>
     <hr />
     <h2><i>Contact us <img src="images.html/contact icon.png" height="30px"></i></h2>
     <hr>
@@ -69,7 +69,15 @@ placeholder="xyz@gmail.com"/> <br/> <br/>
     <a href ="contactyourhotel@gmail.com"> 
         Email us
     </a>
-    <hr/>
+    <hr/> 
+    <div>
+    <p><b> Quick Links</b></p>
+    <li><a href="./pages/about.html"><b>About</b></a></li>
+    <li><a href="./pages/Blog.html"><b>Blogs</b></a></li>
+    <li><a href="./pages/room.html"><b>Room</b></a></li>
+    <li><a href="./pages/Highlight.html"><b>Highlight</b></a></li>
+    </div>
+
 <h3><i>🙏Thank you🙏</i></h3>
    
 </body>
