--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,14 +71,17 @@ placeholder="xyz@gmail.com"/> <br/> <br/>
     </a>
     <hr/> 
     <div>
-    <p><b> Quick Links</b></p>
-    <li><a href="./pages/about.html"><b>About</b></a></li>
-    <li><a href="./pages/Blog.html"><b>Blogs</b></a></li>
-    <li><a href="./pages/room.html"><b>Room</b></a></li>
-    <li><a href="./pages/Highlight.html"><b>Highlight</b></a></li>
+        <p><b>Quick Links</b></p>
+        <ul>
+            <li><a href="./../pages/about.html"><b>About</b></a></li>
+            <li><a href="./../pages/Blog.html"><b>Blogs</b></a></li>
+            <li><a href="./../pages/room.html"><b>Room</b></a></li>
+            <li><a href="./../pages/Highlight.html"><b>Highlight</b></a></li>
+              <!-- <li><a href="#">Contact</a></li> -->
+        </ul>
     </div>
-
-<h3><i>🙏Thank you🙏</i></h3>
+    <hr>
+    <h3><i>🙏Thank you🙏</i></h3>
    
 </body>
 </html>
