--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <a href="./pages/login.html">Login</a>
     <br />
     <hr />
-
-    <br />
     <div>
-      <!-- <h3>Maharashtrian-Thali</h3> -->
+      <!-- <h3>Maharashtrian-Thal
+
+    <br />i</h3> -->
       <h2><u>Discover Rajeshahi's Culinary Delights</u></h2>
       <p>
         <i
