new changes added

--- a/pages/room.html
+++ b/pages/room.html
@@ -29,6 +29,7 @@
 </body>
 
 <body>
+  <form>
 <label for="Destination"></label>
 <select id="destination">
    <b> <option> Select Destination</b></option>
@@ -37,15 +38,15 @@
     <option>Nashik</option>
 </select>
 <br/><br>
-<b>CHECK-IN:</b><input type="date"/>
+<b>CHECK-IN:</b> &nbsp;<input type="date"/>
 <br/><br/>
-<b>CHECK-OUT:</b></CHECK-OUT:b><input type="date"/>
+<b>CHECK-OUT:</b>&nbsp; </CHECK-OUT:b><input type="date"/>
 <br/><br/>
-<b>CHECK-IN TIME:</b><input type="time"/>
+<b>CHECK-IN TIME:</b> &nbsp;<input type="time"/>
 <br/><br/>
-<b>CHECK-OUT TIME:</b><input type="time"/>
+<b>CHECK-OUT TIME:</b>&nbsp;<input type="time"/>
 <br/><br>
-     <h4><u>Guests</u></h4>
+     <b><u>Guests</u></b>
       <br/><br/>
 
     <label for="1"> Adult</label> 
@@ -68,7 +69,7 @@
         <input type="radio" id="room"><img id="room" src="https://static.vecteezy.com/system/resources/thumbnails/033/593/416/small_2x/a-modern-hotel-room-with-wooden-walls-and-a-bed-ai-generated-photo.jpg" hight="50px"> 
         &nbsp;&nbsp;
 
-        <img src="./../images/rooms.jpg" alt="rooms image" width="350px" height="250px"><br/>
+      <input type="radio" id="room1"><img id="room1"src="./../images/rooms.jpg" alt="rooms image" width="600px" height="400px"><br/>
          &nbsp;&nbsp;&nbsp;&nbsp; 
          
         
@@ -85,10 +86,10 @@
          </video> 
    <hr/>
  </div>
-    </fieldset>
+</form>
     <br/><br/>
 
-<input type="submit" value="search Rooms"/>
+<input type="submit" value="submit"/>
 <br/><br/>
 <h3>Quick Links</h3>
    <a href="./about.html">
