--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,7 @@
   &nbsp; &nbsp;
   <b>About</b>
   &nbsp; &nbsp;
-  <a href="./../Menu.html">Menu</a>
+  <a href="./Menu.html">Menu</a>
   &nbsp;&nbsp;
   <a href="./Gallery.html">Gallery</a>
   &nbsp;&nbsp;
