new nbsp chnage

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
-  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+  &nbsp;&nbsp;
 
   <a href="./../index.html">Home</a>
   &nbsp; &nbsp;
