video problem solve

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -49,16 +49,21 @@
      <img src="./../images/rooms.jpg" alt="rooms image" width="350px" height="250px"> &nbsp;&nbsp;&nbsp;&nbsp; 
      <img src="./../images/Lobby.jpg" alt="lobby image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp; 
      <br />
+     <br />
+     <img src="./../images/Hall.jpg" alt="hall image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp; 
+     <img src="./../images/view.jpg" alt=" hotel view image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp; 
+     <img src="./../images/breakfast.jpg" alt="breakfast image" width="350px" height="250px"> &nbsp;&nbsp; &nbsp;
+     <br /> 
 
      <h3 id="videos">Videos</h3>
      <a href="#hotel Gallery">Hotel Gallery</a>
      <br />
 
-     <video controls muted width="400px" height="300px" poster="./../image/hotel1.jpg">
+     <video controls muted width="400px" height="300px" poster="./../images/hotel1.jpg">
         <source src="./../video/sea.mp4" type="video/mp4">
         </video>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-     <video controls muted width="400px" height="300px" poster="./../image/window.jpg">
+     <video controls muted width="400px" height="300px" poster="./../images/window.jpg">
         <source src="./../video/interior.mp4" type="video/mp4">
      </video>
      
