--- a/pages/room.html
+++ b/pages/room.html
@@ -69,20 +69,20 @@
         <input type="radio" id="room"><img id="room" src="./../images/room3.jpg" hight="50px"> 
         &nbsp;&nbsp;
 
-      <input type="radio" id="room1"><img id="room1"src="./../images/rooms.jpg" alt="rooms image" width="600px" height="400px"><br/>
+      <input type="radio" id="room1"><img id="room1"src="./../images/rooms.jpg" alt="rooms image" width="600px" height="500px"><br/>
          &nbsp;&nbsp;&nbsp;&nbsp; 
          
         
      <br>
         <h4>price:above 3000</h4>
-        <input type="radio" id="room4"><img id="room4" src= "./../images/room4.jpeg"hight="1000px">
+        <input type="radio" id="room4"><img id="room4" src= "./../images/room4.jpeg"hight="50px">
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" id="room5"><img id="room5"src="./../"hight="50px">
+        <input type="radio" id="room5"><img id="room5"src="./../images/rooms1.jpg"hight="50px">
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" id="room6"><img id="room6"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXpzRnM1FKzKu3x9sOkmBKVNNb830kY4zgiw&s"hight="50px">
+        <input type="radio" id="room6"><img id="room6"src="./../images/rooms2.jpg"hight="700px" width="600px">
         <br/><br/>
-        <video width ="500" hight="540" controls>
-            <source src="c:\Users\jct\Downloads\room video.mp4" type="video/mp4">
+        <video width ="700px" hight="640px" controls>
+            <source src="./../video/hotel room.mp4" type="video/mp4">
          </video> 
    <hr/>
  </div>
