new changes added

--- a/pages/room.html
+++ b/pages/room.html
@@ -101,9 +101,12 @@
         <a href="./support.html">
             <img src="./../icon/support.png" alt="support icon" width="20px" height="20px"> &nbsp; Support</a> &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <hr />
+            
             <a href="./Highlight.html">
               <img src="./../icon/Highlight.png" alt="support icon" width="20px" height="20px"> &nbsp; <b>Highlights</b> </a>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <br/><br/>
+              <hr/>
             <h2>Follow us</h2>
           
             <a href="#">
